--- a/i18n/en.po
+++ b/i18n/en.po
@@ -8,10 +8,10 @@ msgstr ""
 "PO-Revision-Date: 2010-05-16 18:58+0200\n"
 "Last-Translator: Sylvain Thenault <sylvain.thenault@logilab.fr>\n"
 "Language-Team: English <devel@logilab.fr.org>\n"
-"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en\n"
 "Generated-By: pygettext.py 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
@@ -387,10 +387,10 @@ msgstr ""
 msgid "Download schema as OWL"
 msgstr ""
 
+msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
-msgctxt "inlined:CWUser.use_email.subject"
 msgid "EmailAddress"
 msgstr "Email address"
 
@@ -956,9 +956,6 @@ msgctxt "CWRelation"
 msgid "add_permission"
 msgstr "add permission"
 
-msgid "add_permission_object"
-msgstr "has permission to add"
-
 msgctxt "CWGroup"
 msgid "add_permission_object"
 msgstr "can add"
@@ -966,6 +963,9 @@ msgstr "can add"
 msgctxt "RQLExpression"
 msgid "add_permission_object"
 msgstr "used to define add permission on"
+
+msgid "add_permission_object"
+msgstr "has permission to add"
 
 msgid "add_relation"
 msgstr "add"
@@ -976,8 +976,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"added relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "addrelated"
@@ -1010,9 +1010,6 @@ msgctxt "State"
 msgid "allowed_transition"
 msgstr "allowed transition"
 
-msgid "allowed_transition_object"
-msgstr "incoming states"
-
 msgctxt "BaseTransition"
 msgid "allowed_transition_object"
 msgstr "incoming states"
@@ -1022,6 +1019,9 @@ msgid "allowed_transition_object"
 msgstr "incoming states"
 
 msgctxt "WorkflowTransition"
+msgid "allowed_transition_object"
+msgstr "incoming states"
+
 msgid "allowed_transition_object"
 msgstr "incoming states"
 
@@ -1108,12 +1108,12 @@ msgctxt "Bookmark"
 msgid "bookmarked_by"
 msgstr "bookmarked by"
 
-msgid "bookmarked_by_object"
-msgstr "has bookmarks"
-
 msgctxt "CWUser"
 msgid "bookmarked_by_object"
 msgstr "uses bookmarks"
+
+msgid "bookmarked_by_object"
+msgstr "has bookmarks"
 
 msgid "bookmarks"
 msgstr ""
@@ -1200,9 +1200,6 @@ msgctxt "TrInfo"
 msgid "by_transition"
 msgstr "by transition"
 
-msgid "by_transition_object"
-msgstr "transition information"
-
 msgctxt "BaseTransition"
 msgid "by_transition_object"
 msgstr "transition information"
@@ -1212,6 +1209,9 @@ msgid "by_transition_object"
 msgstr "transition information"
 
 msgctxt "WorkflowTransition"
+msgid "by_transition_object"
+msgstr "transition information"
+
 msgid "by_transition_object"
 msgstr "transition information"
 
@@ -1396,10 +1396,10 @@ msgctxt "WorkflowTransition"
 msgid "condition"
 msgstr "condition"
 
+msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
-msgctxt "RQLExpression"
 msgid "condition_object"
 msgstr "condition of"
 
@@ -1426,10 +1426,10 @@ msgctxt "CWRelation"
 msgid "constrained_by"
 msgstr "constrained by"
 
+msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
-msgctxt "CWConstraint"
 msgid "constrained_by_object"
 msgstr "constraints"
 
@@ -1640,8 +1640,8 @@ msgid ""
 msgstr "creating workflow-transition leading to state %(linkto)s"
 
 msgid ""
-"creating WorkflowTransition (WorkflowTransition transition_of Workflow "
-"%(linkto)s)"
+"creating WorkflowTransition (WorkflowTransition transition_of Workflow %"
+"(linkto)s)"
 msgstr "creating workflow-transition of workflow %(linkto)s"
 
 msgid "creation"
@@ -1663,12 +1663,12 @@ msgctxt "CWConstraint"
 msgid "cstrtype"
 msgstr "constraint type"
 
-msgid "cstrtype_object"
-msgstr "used by"
-
 msgctxt "CWConstraintType"
 msgid "cstrtype_object"
 msgstr "constraint type of"
+
+msgid "cstrtype_object"
+msgstr "used by"
 
 msgid "csv entities export"
 msgstr ""
@@ -1752,10 +1752,10 @@ msgctxt "CWEType"
 msgid "default_workflow"
 msgstr "default workflow"
 
+msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
-msgctxt "Workflow"
 msgid "default_workflow_object"
 msgstr "default workflow of"
 
@@ -1831,14 +1831,14 @@ msgctxt "CWRelation"
 msgid "delete_permission"
 msgstr "delete_permission"
 
-msgid "delete_permission_object"
-msgstr "has permission to delete"
-
 msgctxt "CWGroup"
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
 msgctxt "RQLExpression"
+msgid "delete_permission_object"
+msgstr "has permission to delete"
+
 msgid "delete_permission_object"
 msgstr "has permission to delete"
 
@@ -1848,8 +1848,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #"
-"%(eidto)s"
+"deleted relation %(rtype)s from %(frometype)s #%(eidfrom)s to %(toetype)s #%"
+"(eidto)s"
 msgstr ""
 
 msgid "depends on the constraint type"
@@ -1858,19 +1858,7 @@ msgstr ""
 msgid "description"
 msgstr "description"
 
-msgctxt "BaseTransition"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWAttribute"
-msgid "description"
-msgstr "description"
-
 msgctxt "CWEType"
-msgid "description"
-msgstr "description"
-
-msgctxt "CWRType"
 msgid "description"
 msgstr "description"
 
@@ -1878,7 +1866,11 @@ msgctxt "CWRelation"
 msgid "description"
 msgstr "description"
 
-msgctxt "State"
+msgctxt "Workflow"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWAttribute"
 msgid "description"
 msgstr "description"
 
@@ -1886,22 +1878,22 @@ msgctxt "Transition"
 msgid "description"
 msgstr "description"
 
-msgctxt "Workflow"
-msgid "description"
-msgstr "description"
-
 msgctxt "WorkflowTransition"
 msgid "description"
 msgstr "description"
 
-msgid "description_format"
-msgstr "format"
+msgctxt "State"
+msgid "description"
+msgstr "description"
+
+msgctxt "CWRType"
+msgid "description"
+msgstr "description"
 
 msgctxt "BaseTransition"
-msgid "description_format"
-msgstr "format"
+msgid "description"
+msgstr "description"
 
-msgctxt "CWAttribute"
 msgid "description_format"
 msgstr "format"
 
@@ -1909,19 +1901,7 @@ msgctxt "CWEType"
 msgid "description_format"
 msgstr "format"
 
-msgctxt "CWRType"
-msgid "description_format"
-msgstr "format"
-
 msgctxt "CWRelation"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "State"
-msgid "description_format"
-msgstr "format"
-
-msgctxt "Transition"
 msgid "description_format"
 msgstr "format"
 
@@ -1929,7 +1909,27 @@ msgctxt "Workflow"
 msgid "description_format"
 msgstr "format"
 
+msgctxt "CWAttribute"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "Transition"
+msgid "description_format"
+msgstr "format"
+
 msgctxt "WorkflowTransition"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "State"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "CWRType"
+msgid "description_format"
+msgstr "format"
+
+msgctxt "BaseTransition"
 msgid "description_format"
 msgstr "format"
 
@@ -1950,18 +1950,18 @@ msgstr ""
 msgid "destination_state"
 msgstr "destination state"
 
-msgctxt "SubWorkflowExitPoint"
-msgid "destination_state"
-msgstr "destination state"
-
 msgctxt "Transition"
 msgid "destination_state"
 msgstr "destination state"
 
+msgctxt "SubWorkflowExitPoint"
+msgid "destination_state"
+msgstr "destination state"
+
+msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
-msgctxt "State"
 msgid "destination_state_object"
 msgstr "destination of"
 
@@ -2014,9 +2014,6 @@ msgid "edit the index page"
 msgstr ""
 
 msgid "editable-table"
-msgstr ""
-
-msgid "edition"
 msgstr ""
 
 msgid "eid"
@@ -2218,12 +2215,12 @@ msgctxt "CWProperty"
 msgid "for_user"
 msgstr "for user"
 
-msgid "for_user_object"
-msgstr "use properties"
-
 msgctxt "CWUser"
 msgid "for_user_object"
 msgstr "property of"
+
+msgid "for_user_object"
+msgstr "use properties"
 
 msgid "friday"
 msgstr ""
@@ -2246,12 +2243,12 @@ msgctxt "CWRelation"
 msgid "from_entity"
 msgstr "from entity"
 
-msgid "from_entity_object"
-msgstr "subjet relation"
-
 msgctxt "CWEType"
 msgid "from_entity_object"
 msgstr "subjec relation"
+
+msgid "from_entity_object"
+msgstr "subjet relation"
 
 msgid "from_interval_start"
 msgstr "from"
@@ -2263,10 +2260,10 @@ msgctxt "TrInfo"
 msgid "from_state"
 msgstr "from state"
 
+msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
-msgctxt "State"
 msgid "from_state_object"
 msgstr "transitions from this state"
 
@@ -2424,10 +2421,10 @@ msgctxt "CWUser"
 msgid "in_group"
 msgstr "in group"
 
+msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
-msgctxt "CWGroup"
 msgid "in_group_object"
 msgstr "contains"
 
@@ -2482,10 +2479,10 @@ msgctxt "Workflow"
 msgid "initial_state"
 msgstr "initial state"
 
+msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
-msgctxt "State"
 msgid "initial_state_object"
 msgstr "initial state of"
 
@@ -2717,6 +2714,9 @@ msgstr ""
 msgid "missing parameters for entity %s"
 msgstr ""
 
+msgid "modification"
+msgstr ""
+
 msgid "modification_date"
 msgstr "modification date"
 
@@ -2741,37 +2741,9 @@ msgstr ""
 msgid "name"
 msgstr ""
 
-msgctxt "BaseTransition"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWCache"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWConstraintType"
-msgid "name"
-msgstr ""
-
 msgctxt "CWEType"
 msgid "name"
 msgstr ""
-
-msgctxt "CWGroup"
-msgid "name"
-msgstr ""
-
-msgctxt "CWPermission"
-msgid "name"
-msgstr "name"
-
-msgctxt "CWRType"
-msgid "name"
-msgstr "name"
-
-msgctxt "State"
-msgid "name"
-msgstr "name"
 
 msgctxt "Transition"
 msgid "name"
@@ -2781,9 +2753,37 @@ msgctxt "Workflow"
 msgid "name"
 msgstr ""
 
+msgctxt "CWGroup"
+msgid "name"
+msgstr ""
+
+msgctxt "CWConstraintType"
+msgid "name"
+msgstr ""
+
 msgctxt "WorkflowTransition"
 msgid "name"
 msgstr ""
+
+msgctxt "State"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWPermission"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWRType"
+msgid "name"
+msgstr "name"
+
+msgctxt "BaseTransition"
+msgid "name"
+msgstr "name"
+
+msgctxt "CWCache"
+msgid "name"
+msgstr "name"
 
 msgid "name of the cache"
 msgstr ""
@@ -2967,9 +2967,6 @@ msgstr ""
 msgid "permissions for this entity"
 msgstr ""
 
-msgid "personnal informations"
-msgstr ""
-
 msgid "pick existing bookmarks"
 msgstr ""
 
@@ -2999,10 +2996,10 @@ msgctxt "EmailAddress"
 msgid "prefered_form"
 msgstr "prefered form"
 
+msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
-msgctxt "EmailAddress"
 msgid "prefered_form_object"
 msgstr "prefered over"
 
@@ -3022,12 +3019,15 @@ msgctxt "CWUser"
 msgid "primary_email"
 msgstr "primary email"
 
-msgid "primary_email_object"
-msgstr "primary email of"
-
 msgctxt "EmailAddress"
 msgid "primary_email_object"
 msgstr "primary email of"
+
+msgid "primary_email_object"
+msgstr "primary email of"
+
+msgid "profile"
+msgstr ""
 
 msgid "progress"
 msgstr ""
@@ -3053,20 +3053,17 @@ msgstr "read permission"
 msgid "read_permission"
 msgstr "can be read by"
 
-msgctxt "CWAttribute"
+msgctxt "CWEType"
 msgid "read_permission"
 msgstr "read permission"
 
-msgctxt "CWEType"
+msgctxt "CWAttribute"
 msgid "read_permission"
 msgstr "read permission"
 
 msgctxt "CWRelation"
 msgid "read_permission"
 msgstr "read permission"
-
-msgid "read_permission_object"
-msgstr "has permission to read"
 
 msgctxt "CWGroup"
 msgid "read_permission_object"
@@ -3075,6 +3072,9 @@ msgstr "can be read by"
 msgctxt "RQLExpression"
 msgid "read_permission_object"
 msgstr "can be read by"
+
+msgid "read_permission_object"
+msgstr "has permission to read"
 
 msgid "registry"
 msgstr ""
@@ -3109,10 +3109,10 @@ msgctxt "CWRelation"
 msgid "relation_type"
 msgstr "relation type"
 
+msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
-msgctxt "CWRType"
 msgid "relation_type_object"
 msgstr "relation definitions"
 
@@ -3132,11 +3132,11 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "CWPermission"
+msgctxt "Transition"
 msgid "require_group"
 msgstr "require group"
 
-msgctxt "Transition"
+msgctxt "CWPermission"
 msgid "require_group"
 msgstr "require group"
 
@@ -3144,10 +3144,10 @@ msgctxt "WorkflowTransition"
 msgid "require_group"
 msgstr "require group"
 
+msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
-msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "required by"
 
@@ -3340,10 +3340,10 @@ msgctxt "CWEType"
 msgid "specializes"
 msgstr "specializes"
 
+msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
-msgctxt "CWEType"
 msgid "specializes_object"
 msgstr "specialized by"
 
@@ -3380,10 +3380,10 @@ msgctxt "State"
 msgid "state_of"
 msgstr "state of"
 
+msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
-msgctxt "Workflow"
 msgid "state_of_object"
 msgstr "use states"
 
@@ -3427,20 +3427,20 @@ msgctxt "WorkflowTransition"
 msgid "subworkflow_exit"
 msgstr "subworkflow exit"
 
-msgid "subworkflow_exit_object"
-msgstr "subworkflow exit of"
-
 msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_exit_object"
 msgstr "subworkflow exit of"
 
-msgid "subworkflow_object"
-msgstr "subworkflow of"
+msgid "subworkflow_exit_object"
+msgstr "subworkflow exit of"
 
 msgctxt "Workflow"
 msgid "subworkflow_object"
 msgstr "subworkflow of"
 
+msgid "subworkflow_object"
+msgstr "subworkflow of"
+
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
@@ -3448,10 +3448,10 @@ msgctxt "SubWorkflowExitPoint"
 msgid "subworkflow_state"
 msgstr "subworkflow state"
 
+msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
-msgctxt "State"
 msgid "subworkflow_state_object"
 msgstr "exit point"
 
@@ -3565,10 +3565,10 @@ msgctxt "CWRelation"
 msgid "to_entity"
 msgstr "to entity"
 
+msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
-msgctxt "CWEType"
 msgid "to_entity_object"
 msgstr "object relations"
 
@@ -3582,10 +3582,10 @@ msgctxt "TrInfo"
 msgid "to_state"
 msgstr "to state"
 
+msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
-msgctxt "State"
 msgid "to_state_object"
 msgstr "transitions to this state"
 
@@ -3626,10 +3626,10 @@ msgctxt "WorkflowTransition"
 msgid "transition_of"
 msgstr "transition of"
 
+msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
-msgctxt "Workflow"
 msgid "transition_of_object"
 msgstr "use transitions"
 
@@ -3653,6 +3653,10 @@ msgstr "type"
 msgctxt "WorkflowTransition"
 msgid "type"
 msgstr "type"
+
+msgctxt "ExternalUri"
+msgid "type"
+msgstr ""
 
 msgid "type here a sparql query"
 msgstr ""
@@ -3733,22 +3737,22 @@ msgstr "update permission"
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgctxt "CWAttribute"
-msgid "update_permission"
-msgstr "can be updated by"
-
 msgctxt "CWEType"
 msgid "update_permission"
 msgstr "can be updated by"
 
-msgid "update_permission_object"
-msgstr "has permission to update"
+msgctxt "CWAttribute"
+msgid "update_permission"
+msgstr "can be updated by"
 
 msgctxt "CWGroup"
 msgid "update_permission_object"
 msgstr "has permission to update"
 
 msgctxt "RQLExpression"
+msgid "update_permission_object"
+msgstr "has permission to update"
+
 msgid "update_permission_object"
 msgstr "has permission to update"
 
@@ -3785,10 +3789,10 @@ msgctxt "CWUser"
 msgid "use_email"
 msgstr "use email"
 
+msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
-msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "used by"
 
@@ -3967,10 +3971,10 @@ msgctxt "Workflow"
 msgid "workflow_of"
 msgstr "workflow of"
 
+msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
-msgctxt "CWEType"
 msgid "workflow_of_object"
 msgstr "may use workflow"
 
@@ -3985,6 +3989,9 @@ msgid "xml"
 msgstr ""
 
 msgid "xml export"
+msgstr ""
+
+msgid "yams type, rdf type or mime type of the object"
 msgstr ""
 
 msgid "yes"
