--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.9.6-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon, 13 Sep 2010 10:50:15 +0200
+
 cubicweb (3.9.5-1) unstable; urgency=low
 
   * new upstream release
